2010-04-10 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (Autoloader::__autoload()):
    The search process is divided into first iterating through all indexes and
    then searching each path in the filesystem. This prevents in a multi
    Autoloader environment that before the index of a later Autoloader would
    be used the previous Autoloader would vainly search their class paths.

    * classes/index/AutoloaderIndex.php (AutoloaderIndex::getPaths()):
    For debuging the index has to return an indexed array with its indexed
    paths.

2010-01-09 Markus Malkusch <markus@malkusch.de>

    * classes/fileIterator/AutoloaderFileIterator_PriorityList.php (AutoloaderFileIterator_PriorityList):
    The AutoloaderFileIterator_PriorityList prefers *.inc and *.php files.
    Additionally the prefered files are ordered by the Levenshtein distance to the
    class name. This is the default iterator.
    
    * classes/fileIterator/AutoloaderFileIterator_SimpleCached.php (AutoloaderFileIterator_SimpleCached):
    Once a AutoloaderFileIterator_Simple is completely iterated the found
    files are cached in an ArrayIterator.
       
    * classes/Autoloader.php (Autoloader::setPath()):
    Autoloader::setPath() became private. The path is only set by the constructor.
    If the constructor is empty, the path will be guessed.
    
2010-01-08 Markus Malkusch <markus@malkusch.de>

    * classes/AbstractAutoloader.php (AbstractAutoloader::isRegistered()):
    Using strict mode to avoid the endless recursion.
    
    * classes/Autoloader.php (Autoloader::setFileIterator()):
    The file search is using a dedicated object (AutoloaderFileIterator)
    for iterating through the filesystem. Therefore the methods addSkipPattern()
    and setSkipFilesize() are moved into the AutoloaderFileIterator class.
    
    * classes/Autoloader.php (Autoloader::setPath()):
    Throws AutoloaderException_ClassPath if realpath() fails.
    